--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Clara Lui</h1>
+            <h1>Diane Chen</h1>
             <h2>(she/her)</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
@@ -84,9 +84,10 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="March 2022 – Present">
-                <h3>Starbucks</h3>
-                <h4>Barista</h4>
+            <div data-date="September 2022 – Present">
+                <h3>Simmons University, Ifill College of Media, Arts, and Humanities</h3>
+		<h4>Boston, MA</h4>
+                <h5>Barista</h5>
                 <p>
                     Built beverages to standard, memorized official and off-menu preparations to serve all beverages desired, restocked counter and customer ares, addressed and resolved customer concerns, cleaned and sanitized work areas and utensils, created customer connections to ensure long-term sales, stocked supplies and retail products, and maintained calm demeanor during high-volume periods
                 </p>
